chore: fix void buttons spacing.

--- a/src/loc/ContextualizedLocDetails.css
+++ b/src/loc/ContextualizedLocDetails.css
@@ -59,9 +59,15 @@
     height: 42px;
 }
 
+.ContextualizedLocDetails .ButtonGroup .void-buttons-container > .btn:first-child {
+    margin-left: 15px;
+}
+
+.ContextualizedLocDetails .ButtonGroup .void-buttons-container > .btn:nth-child(n+2),
 .ContextualizedLocDetails .add-buttons-container .btn:nth-child(n+2) {
     margin-left: 20px;
 }
+
 
 .ContextualizedLocDetails .link-button-container {
     display: flex;
